package org.stroganov.dao;

public enum DAOType {
    JSON,
    MYSQL
}
